in master branch 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" type="image/png" href="img/favicon/favicon.png">
 		<!-- Custom Browsers Color-->
 		<meta name="theme-color" content="#3361d8">
-		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="main.min.css">
 	</head>
 	<body>
 		<div class="main-wrapper">
